profile update to use JPA Service + small refactoring. Closes #46

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.banner.image.location=dog-banner.jpg
+spring.profiles.active=springdatajpa
 
 #internationalization
 spring.messages.basename=messages/messages
