added builder for Owner and Pet. Closes #53

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.banner.image.location=dog-banner.jpg
 spring.profiles.active=springdatajpa
-
+#debug=true
 #internationalization
+spring.batch.job.enabled=false
 spring.messages.basename=messages/messages
